--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alabaster==0.7.12
 attrs==19.1.0
 Babel==2.7.0
+category-encoders==2.0.0
 certifi==2019.6.16
 chardet==3.0.4
 colorama==0.4.1
@@ -15,6 +16,7 @@ networkx==2.3
 numpy==1.17.0
 packaging==19.1
 pandas==0.25.1
+patsy==0.5.1
 Pygments==2.4.2
 pyparsing==2.4.2
 python-dateutil==2.8.0
@@ -33,4 +35,5 @@ sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
+statsmodels==0.10.1
 urllib3==1.25.3
